fix sidebar overflow

--- a/src/components/gwf-vis-host-sidebar/gwf-vis-host-sidebar.css
+++ b/src/components/gwf-vis-host-sidebar/gwf-vis-host-sidebar.css
@@ -2,6 +2,7 @@
   display: block;
   margin: var(--leaflet-control-margin);
   height: calc(100vh - var(--leaflet-control-margin) * 2);
+  overflow: hidden;
 }
 
 [part="container"] {
